compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__wrong_type_var.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1554
expression: "fn wibble(x: String) { x }\nfn multi_result(x: some_name) {\n  wibble(x)\n}"
snapshot_kind: text
---
----- SOURCE CODE
fn wibble(x: String) { x }
fn multi_result(x: some_name) {
  wibble(x)
}

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:10
  │
3 │   wibble(x)
  │          ^

Expected type:

    String

Found type:

    some_name
