compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__zero_size_pattern.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 3131
expression: "let assert <<1:size(0)>> = <<>>"
snapshot_kind: text
---
----- SOURCE CODE
let assert <<1:size(0)>> = <<>>

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:16
  │
1 │ let assert <<1:size(0)>> = <<>>
  │                ^^^^^^^ A constant size must be a positive number

See: https://tour.gleam.run/data-types/bit-arrays/
